Fixing stats table overflow/(no)wrap; add left border

--- a/public/main.css
+++ b/public/main.css
@@ -690,12 +690,19 @@ main:has(.cover) footer {
 
 .stats table td {
 	width: 10em;
+	max-width: 10em;
+	white-space: nowrap;
 }
 
 .stats table td:first-child {
 	width: auto;
+	overflow-x: clip;
+	text-overflow: ellipsis;
 }
 
+.stats table td:last-child {
+	border-left: 1px solid;
+}
 
 /* tables */
 
